--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,12 @@ crate-type = ["cdylib", "lib"]
 
 [dependencies]
 hyper = { version = "0.14.28", features = ["full", "server"] }
-pyo3 = { version = "0.23.4", features = ["extension-module", "auto-initialize"] }
+pyo3 = { version = "0.23.4", features = ["extension-module", "auto-initialize", "anyhow"] }
 tokio = { version = "1.43.0", features = ["full"] }
+tracing = "0.1.40"
+tracing-opentelemetry = "0.27.0"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+opentelemetry = "0.26.0"
+opentelemetry-otlp = { version = "0.26.0", features = ["default", "tracing"] }
+opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
+tracing-test = "0.2.5"
