--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib", "lib"]
 
 [dependencies]
 hyper = { version = "0.14.28", features = ["full", "server"] }
-pyo3 = { version = "0.23.4", features = ["extension-module", "auto-initialize", "anyhow"] }
+pyo3 = { version = "0.23.4", features = ["extension-module"] }
 tokio = { version = "1.43.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-opentelemetry = "0.27.0"
