--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,5 +3,5 @@ site_url: https://ashupednekar.github.io/serve-rs
 nav:
   - Home: index.md
   - Installation: Installation.md
-  - Getting Started: "Getting Started.md"
+  - Getting Started: "Getting started.md"
 theme: material
