--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ build-backend = "maturin"
 [project]
 name = "serve-rs"
 requires-python = ">=3.8"
+description = "Simple, fast gunicorn replacement. Feature parity PR's welcome"
+readme = "README.md"
 classifiers = [
     "Programming Language :: Rust",
     "Programming Language :: Python :: Implementation :: CPython",
